--- a/documented-component.yaml
+++ b/documented-component.yaml
@@ -4,7 +4,7 @@ metadata:
   name: documented-component
   description: A Service with TechDocs documentation
   annotations:
-    backstage.io/techdocs-ref: dir:./
+    backstage.io/techdocs-ref: 'github:https://github.com/clicker645/doc'
 spec:
   type: service
   lifecycle: experimental
